[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemy/gobby/Gobby.gd" type="Script" id=1]
[ext_resource path="res://Enemy/gobby/sprite/gobby_idleL_strip8.png" type="Texture" id=2]
[ext_resource path="res://Enemy/gobby/sprite/gobby_moveL_strip6.png" type="Texture" id=3]
[ext_resource path="res://Enemy/gobby/sprite/gobby_dieL_strip9.png" type="Texture" id=4]
[ext_resource path="res://Enemy/gobby/sprite/gobby_attackL_strip7.png" type="Texture" id=5]
[ext_resource path="res://Enemy/gobby/sprite/gobby_jumpL_strip5.png" type="Texture" id=6]
[ext_resource path="res://Enemy/boss/level1/boss1_1/new_styleboxflat.tres" type="StyleBox" id=7]
[ext_resource path="res://Enemy/boss/level1/boss1_1/bge.tres" type="StyleBox" id=8]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.236712, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0, 3, 4, 5, 6, 7, 8, 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4.09056, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 100, 10 )

[node name="Gobby" type="KinematicBody2D" groups=[
"save",
]]
modulate = Color( 0.909804, 0.682353, 0.682353, 1 )
scale = Vector2( 0.8, 0.8 )
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="spriteanim" type="Node2D" parent="."]

[node name="idle" type="Sprite" parent="spriteanim"]
visible = false
texture = ExtResource( 2 )
hframes = 8
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="spriteanim/idle"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="idletimer" type="Timer" parent="spriteanim/idle"]
wait_time = 3.0
one_shot = true

[node name="move" type="Sprite" parent="spriteanim"]
texture = ExtResource( 3 )
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="spriteanim/move"]
autoplay = "move"
anims/move = SubResource( 2 )

[node name="die" type="Sprite" parent="spriteanim"]
visible = false
texture = ExtResource( 4 )
flip_h = true
hframes = 9
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="spriteanim/die"]
anims/die = SubResource( 3 )

[node name="attack" type="Sprite" parent="spriteanim"]
visible = false
texture = ExtResource( 5 )
hframes = 7
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="spriteanim/attack"]
anims/attack = SubResource( 4 )

[node name="jump" type="Sprite" parent="spriteanim"]
visible = false
texture = ExtResource( 6 )
hframes = 5
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="spriteanim/jump"]
anims/jump = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0527625, 4.98001 )
shape = SubResource( 6 )

[node name="attack_area" type="Area2D" parent="."]
position = Vector2( -12, 4.21852 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
shape = SubResource( 7 )

[node name="damage" type="Area2D" parent="."]
position = Vector2( -15, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage"]
shape = SubResource( 8 )
disabled = true

[node name="healthbar" type="ProgressBar" parent="."]
margin_left = -12.2378
margin_top = -17.9196
margin_right = 22.7622
margin_bottom = -3.91957
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/fg = ExtResource( 7 )
custom_styles/bg = ExtResource( 8 )
value = 100.0
percent_visible = false

[node name="check_place" type="RayCast2D" parent="."]
position = Vector2( -9, 4 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="visible" type="Area2D" parent="."]
position = Vector2( 0, -15 )
scale = Vector2( 1.1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="visible"]
position = Vector2( -0.242138, 20.3398 )
shape = SubResource( 9 )
[connection signal="timeout" from="spriteanim/idle/idletimer" to="." method="_on_idletimer_timeout"]
[connection signal="animation_finished" from="spriteanim/die/AnimationPlayer" to="." method="_on_die_animation_finished"]
[connection signal="animation_finished" from="spriteanim/attack/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="damage" to="." method="_on_damage_body_entered"]
[connection signal="body_entered" from="visible" to="." method="_on_visible_body_entered"]
[connection signal="body_exited" from="visible" to="." method="_on_visible_body_exited"]
